plugins {
    id 'java-library'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.107'
}

group = mod_group_id
version = mod_version

base {
    archivesName = mod_id
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

sourceSets {
    main {
        java {
            setSrcDirs(['src/main/java'])
        }
        resources {
            setSrcDirs(['src/main/resources'])
        }
    }
}

neoForge {
    version = neo_version

    runs {
        client {
            client()
        }

        server {
            server()
            programArgument '--nogui'
        }
    }

    mods {
        efab {
            sourceSet sourceSets.main
        }
    }
}

repositories {
    maven {
        name = 'Jared Maven'
        url = 'https://maven.blamejared.com'
    }
}

dependencies {
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('processResources', ProcessResources).configure {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    def replaceProperties = [
            mod_id         : mod_id,
            mod_name       : mod_name,
            mod_version    : mod_version,
            mod_license    : mod_license,
            mod_authors    : mod_authors,
            mod_description: mod_description
    ]
    inputs.properties replaceProperties
    filesMatching('META-INF/neoforge.mods.toml') {
        expand replaceProperties
    }
    from('src/main/resources') {
        include 'assets/efab/textures/**'
        include 'assets/efab/sounds/**'
        include 'assets/efab/sounds.json'
    }
}
